# stop-edr

./: Cargo.toml  README.md  sigma_stop_edr.yml
src/: core.rs  executor.rs  main.rs  privilege.rs
