[package]
name = "stop_edr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
windows = { version = "0.62", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_System_Memory",
	"Win32_System_LibraryLoader",
	"Win32_System_WindowsProgramming",
	"Win32_Storage_FileSystem",
	"Win32_UI_WindowsAndMessaging",
] }

[profile.release]
strip = true 
opt-level = "z"  
lto = true
panic = "abort"
